--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Enter the Key</title>
+  <title>Guess The Key Babyyy🤍✨</title>
   <style>
     body {
       font-family: Arial;
@@ -21,9 +21,9 @@
 </head>
 <body>
 
-  <h2>Enter the Secret Key 🎁</h2>
+  <h2>For My Dear💋💋</h2>
 
-  <input type="Enterkey" id="keyInput" placeholder="Enter key">
+  <input type="Guess The Key" id="keyInput" placeholder="Enter key">
   <br><br>
   <button onclick="checkKey()">Submit</button>
 
@@ -34,12 +34,14 @@
       var key = document.getElementById("keyInput").value;
 
       if (key === "011405") {   // change 1234 to your secret key
-        document.body.innerHTML = "<h1>🎉 Happy Birthday 🎂🎁</h1>";
+        document.body.innerHTML = "<h1>🎉 Happy Birthday 🎂🎁
+          Thank you so much for being born and coming into my life po🙌🏼🤍</h1>";
       } else {
-        document.getElementById("message").innerText = "❌ Wrong Key!";
+        document.getElementById("message").innerText = "❌NAHHH, Think well na baby po";
       }
     }
   </script>
 
 </body>
+
 </html>
